Fix button-min-width.html https://bugs.webkit.org/show_bug.cgi?id=229984

Patch by Rob Buis <rbuis@igalia.com> on 2021-09-14
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-sizing/button-min-width-expected.txt:

Source/WebCore:

Do not use theme min-width/min-height values unless
it is bigger than the actual CSS property values.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle):

Canonical link: https://commits.webkit.org/241693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282440 268f45cc-cd09-0410-ab3c-d52691b4dbfc